# cryptominisat

./: CMakeLists.txt
python/: CMakeLists.txt  setup.py
